Title: completed app.json
Description: completed app.json where it can be deployable however there are some few bugs and kinks to worked on

--- a/site/analytics.html
+++ b/site/analytics.html
@@ -124,9 +124,12 @@
         <nav class="main-nav">
             <a href="index.html">Overview</a>
             <a href="architecture.html">Architecture</a>
-            <a href="analytics.html" class="active">Analytics</a>
-            <a href="https://github.com/avneel-dataeng/azure-style-data-platform" target="_blank">GitHub →</a>
-        </nav>
+            <a href="analytics.html">Analytics</a>
+            <a href="pipeline-status.html">Pipeline Status</a>
+            <a href="https://github.com/avneel-dataeng/azure-style-data-platform" target="_blank">
+        GitHub →
+    </a>
+</nav>
     </div>
 </header>
 
