--- a/site/index.html
+++ b/site/index.html
@@ -16,11 +16,11 @@
             <div class="azure-icon">AG</div>
             <span class="project-name">Azure-Style Data Engineering Platform</span>
         </div>
-
         <nav class="main-nav">
-            <a href="index.html" class="active">Overview</a>
+            <a href="index.html">Overview</a>
             <a href="architecture.html">Architecture</a>
             <a href="analytics.html">Analytics</a>
+            <a href="pipeline-status.html">Pipeline Status</a>
             <a href="https://github.com/avneel-dataeng/azure-style-data-platform" target="_blank">
                 GitHub →
             </a>
